--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 </script>
     
     <!-- Security Meta Tags -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data: https://images.unsplash.com; font-src 'self' https://cdnjs.cloudflare.com; connect-src 'self' https://forms.gle;">
+    <meta http-equiv="Content-Security-Policy" 
+content="
+default-src 'self'; 
+script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://www.googletagmanager.com; 
+style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; 
+img-src 'self' data: https://images.unsplash.com; 
+font-src 'self' https://cdnjs.cloudflare.com; 
+connect-src 'self' https://forms.gle https://www.google-analytics.com https://www.googletagmanager.com;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="DENY">
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
@@ -599,3 +606,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
